# pythonbible-lite

./: .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  requirements-test.txt
.github/workflows/: codeql-analysis.yml  python-package.yml  release.yml  tests.yml
docs/: Makefile
docs/source/: advanced_usage.rst  basic_usage.rst  conf.py  installation.rst
pythonbible/: __init__.py  formatter.py  verses.py
pythonbible/bible/: __init__.py  bible.py
pythonbible/bible/versions/akjv/: __init__.py
pythonbible/bible/versions/asv/: __init__.py
pythonbible/bible/versions/bbe/: __init__.py
pythonbible/bible/versions/bwe/: html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/diaglot/: html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/etheridge/: __init__.py  html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/kjv/: __init__.py
pythonbible/bible/versions/leeser/: __init__.py
pythonbible/bible/versions/lont/: __init__.py  html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/mkjv1963/: __init__.py
pythonbible/bible/versions/mont/: __init__.py  html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/nheb/: __init__.py
pythonbible/bible/versions/oeb/: __init__.py  html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/roth/: __init__.py
pythonbible/bible/versions/rwebster/: __init__.py
pythonbible/bible/versions/rylt/: __init__.py  html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/tyn/: __init__.py  html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  plain_text_readers_bible.py
pythonbible/bible/versions/ukjv/: __init__.py
pythonbible/bible/versions/wbs/: __init__.py
pythonbible/bible/versions/web/: __init__.py
pythonbible/bible/versions/wesley/: __init__.py  html_bible.py  html_notes_bible.py  html_readers_bible.py  plain_text_bible.py  plain_text_notes_bible.py  (+1 more)
tests/: bible_test.py  conftest.py  converter_test.py  counters_test.py  errors_test.py  verses_test.py
tests/docs/: __init__.py  advanced_usage_test.py  basic_usage_test.py
tests/formatter/: conftest.py  formatter_test.py  missing_file_handling_test.py  version_specific_test.py
tests/parser/: conftest.py  parser_test.py
(+9 files in other folders)
